--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "dependencies": {
     "bootstrap": "4.3.1",
     "chart.js": "2.8.0",
+    "datatables.net": "1.10.16",
+    "datatables.net-bs": "1.10.16",
+    "datatables.net-responsive": "2.2.1",
     "history": "4.9.0",
     "node-sass": "4.12.0",
     "perfect-scrollbar": "1.4.0",
@@ -34,7 +37,7 @@
     "@types/googlemaps": "3.36.2",
     "@types/markerclustererplus": "2.1.33",
     "@types/react": "16.8.19",
-    "jquery": "3.4.1",
+    "jquery": "3.3.1",
     "typescript": "3.5.1"
   },
   "browserslist": {
